# Road-SOS

./: README.md  ROADSOS_MASTER_IDE_PROMPT.md  build_apk.bat
apps/mobile/: app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/android/: build.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/assets/data/: ambulance_station.json  fire_station.json  hospital.geojson  pharmacy.geojson  police.json  puncture_shop.json  towing.geojson  trauma_centre.json
apps/mobile/ios/: Podfile
apps/mobile/ios/mobile.xcodeproj/: project.pbxproj
apps/mobile/patches/: @react-native-voice+voice+3.2.4.patch
apps/mobile/src/app/: App.tsx
apps/mobile/src/app/navigation/: RootNavigator.tsx
apps/mobile/src/core/ai/: CommandParser.ts  GroqClient.ts  LlamaController.ts  SmsFallback.ts  VoiceActivation.ts
apps/mobile/src/core/data/: PoiDataLoader.ts
apps/mobile/src/core/db/: PoiRepository.ts  RealmConfig.ts  SyncManager.ts
apps/mobile/src/core/geo/: BoundingBox.ts  OfflineTileManager.ts  haversine.ts
apps/mobile/src/core/network/: ConnectivityMonitor.ts  OverpassClient.ts  SmsFallback.ts
apps/mobile/src/core/utils/: Logger.ts  RateLimiter.ts
apps/mobile/src/features/ai/: AIHelpScreen.tsx
apps/mobile/src/features/map/: MapScreen.tsx  PlanTripScreen.tsx  PoiMarker.tsx  useNearbyPois.ts
apps/mobile/src/features/settings/: DownloadZoneScreen.tsx  SettingsScreen.tsx
apps/mobile/src/features/sos/: SosButton.tsx  SosScreen.tsx  useSos.ts
apps/mobile/src/shared/theme/: theme.ts
pipeline/: CMakeLists.txt
pipeline/scripts/: fetch_and_build.sh
pipeline/src/: main.cpp
pipeline/src/geo/: BoundingBox.hpp  GeoJsonWriter.cpp  GeoJsonWriter.hpp
pipeline/src/memory/: ArenaAllocator.hpp
pipeline/src/overpass/: OverpassQuery.cpp  OverpassQuery.hpp  QueryBuilder.cpp  QueryBuilder.hpp
pipeline/src/utils/: Logger.hpp
shared/schemas/: poi.schema.json
(+8 files in other folders)
